# credit-risk-analysis

./: .gitignore  Procfile  README.md  heroku_script.sh  pyproject.toml  requirements.txt  script.sh  setup.sh
nbs/: analysis.ipynb
src/: Hello.py  Home.py  main.py
src/data/: data.py  setup.py
src/data/data/: data.py
src/model/: __init__.py  model.py  setup.py  visualization.py
src/model/model/: ModelPerformance.py  model.py
src/pages/: Insights.py  Model.py
