[tool.poetry]
name = "credit-risk"
version = "0.1.0"
description = "Credit Risk analysis to identify defaults with visualization."
authors = ["Piotr Wislowski"]
readme = "README.md"
packages = [{include = "credit_risk"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
numpy = "^1.24.3"
streamlit = "^1.21.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
